Add vercel conf

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ ssl/openssl.conf
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+.vercel
