vercel last try

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-    "rewrites": [{ "source": "/api/v1/(.*)", "destination": "/api/index.js" }]
-}
-  
+    "functions": {
+    "index.js": {
+      "runtime": "@now/node@1.6.1"
+    }
+    },
+    "rewrites": [{
+    "source": "/api/v1/(.*)", "destination": "index.js"
+    }]
+    }
