--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
     "config": "3.3.1",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
